--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 2</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Coursera Module 2 - Joel Apablaza</title>
 </head>
 <body>
-    
-</body>
+    <h1>Our Menu</h1>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+     <div class="section">
+         <h2 class="chicken">Chicken</h2>
+         <p>Vivamus placerat tempor ex, sit amet fringilla dolor. Cras mattis nisl sed erat molestie, vitae porttitor turpis aliquam. Sed accumsan consequat mauris vitae euismod. Maecenas eleifend consequat ultrices. Nullam ultrices nibh vulputate nulla mattis, quis sagittis ante ornare. Morbi eu efficitur diam, rutrum vestibulum augue. Morbi vel vestibulum sapien. Nunc a magna ac diam ultricies pellentesque a vel eros. Proin ut pretium ex, at porta tortor.</p>
+     </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <div class="section">
+        <h2 class="beef">Beef</h2>
+        <p>Vivamus placerat tempor ex, sit amet fringilla dolor. Cras mattis nisl sed erat molestie, vitae porttitor turpis aliquam. Sed accumsan consequat mauris vitae euismod. Maecenas eleifend consequat ultrices. Nullam ultrices nibh vulputate nulla mattis, quis sagittis ante ornare. Morbi eu efficitur diam, rutrum vestibulum augue. Morbi vel vestibulum sapien. Nunc a magna ac diam ultricies pellentesque a vel eros. Proin ut pretium ex, at porta tortor.</p>
+     </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <div class="section">
+        <h2 class="sushi">Sushi</h2>
+        <p>Vivamus placerat tempor ex, sit amet fringilla dolor. Cras mattis nisl sed erat molestie, vitae porttitor turpis aliquam. Sed accumsan consequat mauris vitae euismod. Maecenas eleifend consequat ultrices. Nullam ultrices nibh vulputate nulla mattis, quis sagittis ante ornare. Morbi eu efficitur diam, rutrum vestibulum augue. Morbi vel vestibulum sapien. Nunc a magna ac diam ultricies pellentesque a vel eros. Proin ut pretium ex, at porta tortor.</p>
+     </div>
+    </div> 
+   </body>
 </html>
